@@ -1,3 +1,4 @@
+* Return 'Access Denied' message when Webgistix credenentials are invalid [cody]
 * Update Shipwire endpoint hostname [cody]
 * Add missing ISO countries [Edward Ocampo-Gooding]
 * Add support for Guernsey to country.rb [cody]
